# synthdb

./: .auto-changelog  .codespellrc  .copier-answers.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  alembic.ini  package.json  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  how_to_use.yaml
.github/workflows/: run-tox.yml
docs/source/: api_ref.rst  cli.rst  conf.py  index.rst
synthdb/: __init__.py  cli.py  input_tools.py  morph_release_tools.py  schema.py  version.py
synthdb/alembic/: README.md  env.py  script.py.mako
synthdb/alembic/versions/: 0001_create_initial_table.py  0002_create_morphology_release_table.py  0003_add_column_for_luigi_config_in_the_.py
synthdb/data/: internal_db.sqlite
synthdb/insitu_synthesis_input/mouse_TH/: mtype_taxonomy.tsv
synthdb/insitu_synthesis_inputs/boundary_example/: cell_composition.yaml  create_mesh.py  custom_parameters.csv  mtype_taxonomy.tsv  region_structure.yaml  substitution_rules.yaml
synthdb/insitu_synthesis_inputs/mouse_CA1/: cell_composition.yaml  custom_parameters.csv  mtype_taxonomy.tsv  region_structure.yaml
synthdb/insitu_synthesis_inputs/mouse_CA2/: cell_composition.yaml  custom_parameters.csv  mtype_taxonomy.tsv  region_structure.yaml  scaling_rules.yaml
synthdb/insitu_synthesis_inputs/mouse_CA3/: cell_composition.yaml  custom_parameters.csv  mtype_taxonomy.tsv  region_structure.yaml  scaling_rules.yaml
synthdb/insitu_synthesis_inputs/mouse_CBX/: cell_composition.yaml  custom_parameters.csv  mtype_taxonomy.tsv  region_structure.yaml  scaling_rules.yaml
synthdb/insitu_synthesis_inputs/mouse_DG/: cell_composition.yaml  custom_parameters.csv  mtype_taxonomy.tsv  region_structure.yaml  scaling_rules.yaml
synthdb/insitu_synthesis_inputs/mouse_MOB/: cell_composition.yaml  create_mesh.py  custom_parameters.csv  mtype_taxonomy.tsv  region_structure.yaml  scaling_rules.yaml  substitution_rules.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_input_tools.py  test_morph_release_tools.py  test_schema.py
(+613 files in other folders)
